# fluent-app

./: .gitignore  UI Animation.html  deploy_production.bat  railway.json  run_ssh_tunnel.py  run_tunnel.py
fluent/backend/: .env.example  Dockerfile  pyproject.toml  requirements.txt  resolved_original_wiki.json  unsplash_resolved.json  verify_endpoints.py  wiki_resolved.json
fluent/backend/app/: main.py
fluent/backend/app/api/: deps.py
fluent/backend/app/api/v1/: articles.py  auth.py  coach.py  cognitive.py  content.py  curriculum.py  gamification.py  (+9 more)
fluent/backend/app/core/: config.py  context.py  logging.py  security.py  srs.py
fluent/backend/app/db/: base.py  models.py  session.py
fluent/backend/app/schemas/: ai.py  cognitive.py  content.py  learning.py  user.py
fluent/backend/app/seed/: content_library.json  generate_seed_content.py  seed_cognitive.py  seed_content.py  seed_data.py
fluent/backend/app/services/: adaptive_engine.py  ai_content_generator.py  ai_router.py  cache.py  content_library.py  content_service.py  curriculum_data.py  curriculum_data_building.py  curriculum_data_mastery.py  curriculum_service.py  daily_planner.py  fsrs.py  gamification_service.py  grammar_data.py  notification_service.py  progress_service.py  pronunciation_azure.py  srs_engine.py  srs_scheduler.py  tts_service.py
fluent/backend/fluent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
fluent/backend/migrations/: env.py
fluent/backend/migrations/versions/: 80b0b0f3900b_add_fsrs_tables.py  ac82287cb8a3_add_content_items.py  ef91e1c2e4c1_add_tutor_messages.py
(+64 files in other folders)
